PDM-2156 updated default configuration

--- a/default_config/config.json
+++ b/default_config/config.json
@@ -2,6 +2,7 @@
   "timezone": "America/Los_Angeles",
   "currency": "USD",
   "features": {
-    "property.new.policy.format.enabled": true
+    "property.new.policy.format.enabled": true,
+    "property.new.policy.view.enabled": true
   }
 }
