PDM-2228 updated default config

--- a/default_config/config.json
+++ b/default_config/config.json
@@ -1,7 +1,5 @@
 {
   "timezone": "America/Los_Angeles",
   "currency": "USD",
-  "features": {
-    "property.new.policy.format.enabled": true
-  }
+  "improvedRating": true
 }
