PDM-2338 updated default config with renewal and endorsemnt info

--- a/default_config/config.json
+++ b/default_config/config.json
@@ -1,5 +1,8 @@
 {
   "timezone": "America/Los_Angeles",
   "currency": "USD",
-  "improvedRating": true
+  "improvedRating": true,
+   "features": {
+    "property.endorsement.renewal.underwriting.enabled": true
+  }
 }
