--- a/socotratools/requirements.txt
+++ b/socotratools/requirements.txt
@@ -1,6 +1,12 @@
-setuptools==3.3
+certifi==2020.6.20
+chardet==3.0.4
+idna==2.10
+py==1.9.0
+PyJWT==1.5.0
 pytest==2.6.4
 pytz==2017.2
+requests==2.24.0
 retrying==1.3.3
-PyJWT==1.5.0
+six==1.15.0
 unicodecsv==0.14.1
+urllib3==1.25.9
