cancels with installment plugin

--- a/default_config/config.json
+++ b/default_config/config.json
@@ -3,6 +3,7 @@
   "currency": "USD",
   "improvedRating": true,
    "features": {
-    "property.endorsement.renewal.underwriting.enabled": true
-  }
+    "property.endorsement.renewal.underwriting.enabled": true,
+    "property.installments.plugin.enabled": true
+   }
 }
